--- a/README
+++ b/README
@@ -1,3 +1,23 @@
+This tool is a simple monitoring daemon that send emails on alerts.
+
+Tests:
+	- Check host url/ip with ping
+	- Check disk available space
+	- Check disk power state
+	- Check lm_sensors ALARM status
+	- Check cpu load
+	- Check UPS status (upsc)
+
+Features:
+	- Invalid slot time (ex: Error can occurs in between 6:00 and 7:00)
+	- On error, a mail is sent every X hours	
+
+Files:
+	- monitoring.py (main deamon codes)
+	- check_[test_name] (bash or python script that perform a test, return code defines the status of the test)
+	- settings.py (test settings)
+	- monitoring.service (Systemd service file)
+
 1/ Get source code
 	$ git clone https://github.com/johaahn/monitoring.git
 
@@ -5,15 +25,19 @@
 	$ cd monitoring
 	$ cp ./settings.py.example ./settings.py
 
-3/ Edit settings
+3/ Edit settings in order to configure tests and emails (source and destination)
 	$ vim ./settings.py 
 
 4/ Copy systemd config service
 	$ sudo cp ./monitoring.service /etc/systemd/system/monitoring.service
 
-5/ Replace example with your user name in systemd service config file
+5/ Replace example with your user name in systemd service config file. (Script does not need to be launched with root user)
 	$ sudo vim /etc/systemd/system/monitoring.service
 
 6/ Start monitoring
 	$ sudo systemctl restart monitoring.service
+
+7/ If you need to check disk power state, add this line to your sudoers file:
+ALL     ALL=(ALL) NOPASSWD: /sbin/hdparm -C /dev/sd[a-z]
+This test needs hdparm that needs root permission.
 
